# docs/swagger.json
@@ -5,13 +5,120 @@
         "title": "chat",
         "contact": {},
         "license": {
-            "name": "lyc"
+            "name": "lyc,why"
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1",
+    "host": "127.0.0.1:8084",
     "basePath": "/",
     "paths": {
+        "/api/account/info": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "获取账户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "account_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "1001:参数有误 1003:系统错误 2009:权限不足 2007:身份不存在 2008:身份验证失败 2010:账号不存在",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.State"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/reply.GetAccountByID"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/account/infos/name": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "通过昵称模糊查找账户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "x-token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "Page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "PageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "account_name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "1001:参数有误 1003:系统错误 2007:身份不存在 2008:身份验证失败 2010:账号不存在",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.State"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/reply.GetAccountsByName"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/email/check": {
             "post": {
                 "consumes": [
@@ -281,6 +388,72 @@
                 }
             }
         },
+        "reply.Account": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "reply.GetAccountByID": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "reply.GetAccountsByName": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/reply.Account"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "reply.LoginReply": {
             "type": "object",
             "properties": {
@@ -305,6 +478,7 @@
             ],
             "properties": {
                 "email": {
+                    "description": "检查是否存在的邮箱",
                     "type": "string"
                 }
             }
@@ -344,20 +518,25 @@
             ],
             "properties": {
                 "email": {
+                    "description": "注册邮箱",
                     "type": "string"
                 },
                 "email_code": {
+                    "description": "邮箱验证码",
                     "type": "string"
                 },
                 "mobile": {
+                    "description": "手机",
                     "type": "string"
                 },
                 "password": {
+                    "description": "密码",
                     "type": "string",
                     "maxLength": 12,
                     "minLength": 3
                 },
                 "rePassword": {
+                    "description": "第二次输出密码",
                     "type": "string"
                 }
             }
@@ -386,6 +565,7 @@
             ],
             "properties": {
                 "email": {
+                    "description": "发送邮箱的验证码",
                     "type": "string"
                 }
             }
@@ -393,6 +573,13 @@
         "token.Payload": {
             "type": "object",
             "properties": {
+                "content": {
+                    "description": "可以是用户或者是账户",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "expired-at": {
                     "type": "string"
                 },
@@ -403,9 +590,6 @@
                 "issued-at": {
                     "description": "创建时间用于检验",
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         }
