# internal/model/reply/account.go
@@ -4,7 +4,7 @@ import (
 	"time"
 )
 
-type GetAccountByID struct {
+type Account struct {
 	ID        uint      `json:"id" gorm:"primarykey"`
 	CreatedAt time.Time `json:"created_at"`
 	UserID    uint      `json:"user_id"`
@@ -12,4 +12,13 @@ type GetAccountByID struct {
 	Signature string    `json:"signature"`
 	Avatar    string    `json:"avatar"`
 	Gender    int       `json:"gender"`
+}
+
+type GetAccountByID struct {
+	Account
+}
+
+type GetAccountsByName struct {
+	Account []*Account
+	Total   int64
 }
